sampleapp-all.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sampleapp
      app.kubernetes.io/component: sampleapp
      app.kubernetes.io/instance: sampleapp
    name: aspnet
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: mcr.microsoft.com/dotnet/aspnet:8.0
      from:
        kind: DockerImage
        name: mcr.microsoft.com/dotnet/aspnet:8.0
      generation: null
      importPolicy:
        importMode: Legacy
      name: "8.0"
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sampleapp
      app.kubernetes.io/component: sampleapp
      app.kubernetes.io/instance: sampleapp
    name: sampleapp
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sampleapp
      app.kubernetes.io/component: sampleapp
      app.kubernetes.io/instance: sampleapp
    name: sampleapp
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: sampleapp:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/chaudharyprateek/SampleApp.git
      type: Git
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: aspnet:8.0
      type: Docker
    triggers:
    - github:
        secret: 805UIjbk3966GQ4xQt8x
      type: GitHub
    - generic:
        secret: vNgytZAFW2OH2ED9h-rx
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"sampleapp:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"sampleapp\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sampleapp
      app.kubernetes.io/component: sampleapp
      app.kubernetes.io/instance: sampleapp
    name: sampleapp
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: sampleapp
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: sampleapp
      spec:
        containers:
        - image: ' '
          name: sampleapp
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sampleapp
      app.kubernetes.io/component: sampleapp
      app.kubernetes.io/instance: sampleapp
    name: sampleapp
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deployment: sampleapp
  status:
    loadBalancer: {}
kind: List
metadata: {}
